# voice-agent-streaming-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: app.yaml  routing.yaml
scripts/: build_dataset_parquet.py  demo_intent_inference.py  generate_synthetic_logs.py  simulate_call.py  train_intent_model.py
src/voice_agent_streaming_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/voice_demo/: container.py  settings.py
src/voice_demo/adapters/: broker_redis_streams.py  llm_openai.py  llm_stub.py  semantic_model_intent.py  semantic_openai_embeddings.py  semantic_stub.py  state_redis.py
src/voice_demo/adapters/serializers/: session_serializer.py
src/voice_demo/api/: deps.py  errors.py  main.py  routes.py
src/voice_demo/app/: config.py  events.py
src/voice_demo/app/use_cases/: ingest_chunk.py  routing.py  routing_resolvers.py  routing_types.py  scoring.py  suggestion.py
src/voice_demo/config/: loader.py  models.py
src/voice_demo/domain/: constants.py  errors.py  models.py  time_utils.py
src/voice_demo/ports/: broker.py  llm.py  semantic_intent.py  state_store.py
src/voice_demo/workers/: transcript_worker.py
tests/: conftest.py  test_broker_redis.py  test_domain_models.py  test_event_models.py  test_healthz.py  test_routing_chain.py
